# eavesdropper

./: .gitignore  README.md  install_env.sh  package.json  pnpm-lock.yaml
admin-server/: README.en.md  README.md  application.properties  init.sql  pom.xml
admin-server/base/: pom.xml
admin-server/business/: pom.xml
admin-server/common/: pom.xml
admin-server/kakrolot-web/: build.sh  deploy.sh  (+7 more)
admin-web/: README.md  deploy.sh  index.html  package.json  vite.config.js  vue.config.js
admin-web-gemini/: index.html  package.json  vite.config.js
admin-webview/: README.zh-CN.md  deploy.sh  package.json
admin-webview-claude/: Vue2.6.x升级Vue3 API变化点汇总.md  index.html  package.json  update-env-vars.sh  vite.config.js
ai/: main.py  pyproject.toml  requirements.txt  start.sh  stop.sh
algorithm/: Cargo.toml  README.md  algorithm.win32-x64-msvc.node  example.js  index.js  package.json  test-darwin.js  test.js
algorithm/__test__/: index.spec.mjs
algorithm/darwin-x64/: index.d.ts
algorithm/npm/darwin-x64/: README.md  package.json
algorithm/npm/linux-x64-gnu/: README.md  package.json
algorithm/npm/win32-x64-msvc/: README.md  package.json
algorithm/scripts/: copy-windows-node.js  verify-node-files.js
algorithm/src/: lib.rs
algorithm/win32-x64-msvc/: algorithm.darwin-x64.node  index.js
client/: README.md
desgin/: test.html
script/: run_goctl.sh
server/: README.md  deploy.sh  go.mod  go.sum  start.sh  stop.sh
server-zero/: README.md  go.mod  go.sum
tb_slider/: package-lock.json  package.json
test_electron/: package-lock.json  package.json
(+1547 files in other folders)
